@@ -1,0 +1,9 @@
+use-chrono-in-qtimer/main.cpp:12:23: warning: make code more robust: use 1s instead. [-Wclazy-use-chrono-in-qtimer]
+use-chrono-in-qtimer/main.cpp:13:23: warning: make code more robust: use 1200ms instead. [-Wclazy-use-chrono-in-qtimer]
+use-chrono-in-qtimer/main.cpp:14:23: warning: make code more robust: use 2min instead. [-Wclazy-use-chrono-in-qtimer]
+use-chrono-in-qtimer/main.cpp:15:23: warning: make code more robust: use 5h instead. [-Wclazy-use-chrono-in-qtimer]
+use-chrono-in-qtimer/main.cpp:16:23: warning: make code more robust: use 1min instead. [-Wclazy-use-chrono-in-qtimer]
+use-chrono-in-qtimer/main.cpp:17:23: warning: make code more robust: use 15min instead. [-Wclazy-use-chrono-in-qtimer]
+use-chrono-in-qtimer/main.cpp:23:17: warning: make code more robust: use 15s instead. [-Wclazy-use-chrono-in-qtimer]
+use-chrono-in-qtimer/main.cpp:27:22: warning: make code more robust: use 1s instead. [-Wclazy-use-chrono-in-qtimer]
+use-chrono-in-qtimer/main.cpp:28:24: warning: make code more robust: use 1s instead. [-Wclazy-use-chrono-in-qtimer]
