@@ -135,3 +135,4 @@
 * v1.8 (2020)
     - New Checks:
       - qt6-qhash-signature
+      - use-chrono-in-qtimer
